RESOLVED FIXED286038
REGRESSION(288610@main): No video in iOS fullscreen
https://bugs.webkit.org/show_bug.cgi?id=286038
Summary REGRESSION(288610@main): No video in iOS fullscreen
Jer Noble
Reported 2025-01-15 16:29:44 PST
REGRESSION(288610@main): No video in iOS fullscreen
Attachments
Jer Noble
Comment 1 2025-01-15 16:29:46 PST
Jer Noble
Comment 2 2025-01-15 16:32:35 PST
EWS
Comment 3 2025-01-16 05:03:00 PST
Committed 289005@main (3595bd894fbe): <https://commits.webkit.org/289005@main> Reviewed commits have been landed. Closing PR #39106 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.