REGRESSION(288610@main): No video in iOS fullscreen https://bugs.webkit.org/show_bug.cgi?id=286038 rdar://142939518

Reviewed by Andy Estes.

During the refactor in 288610@main, the video view stopped getting added as a subview
to the target fullscreen view; add that back into `-transferVideoViewTo:`.

* Source/WebCore/platform/cocoa/WebAVPlayerLayerView.mm:
(WebCore::WebAVPlayerLayerView_transferVideoViewTo):

Canonical link: https://commits.webkit.org/289005@main